# marimo-gh-pages

./: .gitignore  build.py  config.toml  justfile  pyproject.toml
.github/scripts/: build.py
.github/workflows/: deploy.yml
apps/: caternary.py
config/: config.toml  inline.toml
huggingface/: README.md
local_module/caternary_py/: bubble_cosh.py
notebooks/: blank_notebook.py  caternary.py  caternary_original.py.OFF  fibonacci.py.OFF  penguins.py.OFF
src/: auto_inline_to_marimo.py  module_to_marimo.py
templates/: databooth.html.j2  huggingface.html.j2
