[project]
name = "marimo-gh-pages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.33.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "marimo>=0.14.9",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.0",
]
